--- a/src/app/homepage/homepage.component.html
+++ b/src/app/homepage/homepage.component.html
@@ -190,12 +190,11 @@
                           <div class="img-wrapper">
                               <div class="ribbon"><span>Remise</span></div>
                               <div class="front">
-                                  <a href="product-page(no-sidebar).html"><img alt="" src="../assets/images/marijuana/pro/21.jpg"  ></a>
+                                  <a href="product-page(no-sidebar).html"><img alt="" src="../assets/images/the-cafe/Cafe_moka_bio.jpg"  ></a>
                               </div>
                               <div class="cart-info cart-wrap">
                                   <a href="javascript:void(0)" title="Add to Wishlist"><i class="fa fa-heart" aria-hidden="true"></i></a>
                                   <button data-toggle="modal" data-target="#addtocart" title="Add to cart"><i class="ti-shopping-cart"></i> Ajouter au panier</button>
-                                  <a href="compare.html" title="Compare"><i class="fa fa-refresh" aria-hidden="true"></i></a>
                                   <a class="mobile-quick-view" href="#" data-toggle="modal" data-target="#quick-view" title="Quick View"><i class="ti-search" aria-hidden="true"></i></a>
                               </div>
                               <div class="quick-view-part">
@@ -211,20 +210,19 @@
                                   <i class="fa fa-star"></i>
                               </div>
                               <a href="product-page(no-sidebar).html">
-                                  <h6>Slim Fit Cotton Shirt</h6>
+                                  <h6>Café Moka Bio</h6>
                               </a>
-                              <h4>$500.00</h4>
+                              <h4>€15.00<del>€20.00</del></h4>
                           </div>
                       </div>
                       <div class="product-box product-wrap col-lg-4">
                           <div class="img-wrapper">
                               <div class="front">
-                                  <a href="product-page(no-sidebar).html"><img alt="" src="../assets/images/marijuana/pro/1.jpg" class="img-fluid blur-up lazyload bg-img" ></a>
+                                  <a href="product-page(no-sidebar).html"><img alt="" src="../assets/images/the-cafe/the_agrume_mure_noir.jpg" class="img-fluid lazyload bg-img" ></a>
                               </div>
                               <div class="cart-info cart-wrap">
                                   <a href="javascript:void(0)" title="Add to Wishlist"><i class="fa fa-heart" aria-hidden="true"></i></a>
                                   <button data-toggle="modal" data-target="#addtocart" title="Add to cart"><i class="ti-shopping-cart"></i> Ajouter au panier</button>
-                                  <a href="compare.html" title="Compare"><i class="fa fa-refresh" aria-hidden="true"></i></a>
                                   <a class="mobile-quick-view" href="#" data-toggle="modal" data-target="#quick-view" title="Quick View"><i class="ti-search" aria-hidden="true"></i></a>
                               </div>
                               <div class="quick-view-part">
@@ -240,21 +238,20 @@
                                   <i class="fa fa-star"></i>
                               </div>
                               <a href="product-page(no-sidebar).html">
-                                  <h6>Slim Fit Cotton Shirt</h6>
+                                  <h6>Thé Agrume Mûre Noir</h6>
                               </a>
-                              <h4>$500.00 <del>$600.00</del></h4>
+                              <h4>€20.00</h4>
                           </div>
                       </div>
                       <div class="product-box product-wrap col-lg-4">
                           <div class="img-wrapper">
                               <div class="ribbon"><span>Remise</span></div>
                               <div class="front">
-                                  <a href="product-page(no-sidebar).html"><img alt="" src="../assets/images/marijuana/pro/10.jpg" class="img-fluid blur-up lazyload bg-img" ></a>
+                                  <a href="product-page(no-sidebar).html"><img alt="" src="../assets/images/the-cafe/Cafe_mixte_granaroma.jpg" class="img-fluid lazyload bg-img" ></a>
                               </div>
                               <div class="cart-info cart-wrap">
                                   <a href="javascript:void(0)" title="Add to Wishlist"><i class="fa fa-heart" aria-hidden="true"></i></a>
                                   <button data-toggle="modal" data-target="#addtocart" title="Add to cart"><i class="ti-shopping-cart"></i> Ajouter au panier</button>
-                                  <a href="compare.html" title="Compare"><i class="fa fa-refresh" aria-hidden="true"></i></a>
                                   <a class="mobile-quick-view" href="#" data-toggle="modal" data-target="#quick-view" title="Quick View"><i class="ti-search" aria-hidden="true"></i></a>
                               </div>
                               <div class="quick-view-part">
@@ -270,9 +267,9 @@
                                   <i class="fa fa-star"></i>
                               </div>
                               <a href="product-page(no-sidebar).html">
-                                  <h6>Slim Fit Cotton Shirt</h6>
+                                  <h6>Café Mixte Gran Aroma</h6>
                               </a>
-                              <h4>$500.00</h4>
+                              <h4>€19.99<del>€29.00</del></h4>
                           </div>
                       </div>
                   </div>
@@ -282,82 +279,7 @@
     </section>
     <!-- Product slider end -->
 
-    <!-- blog section -->
-    <div class="container section-t-space col-lg-12">
-      <div class="row">
-          <div class="col">
-              <div class="title3">
-                  <h4>Actualités</h4>
-                  <h2 class="title-inner3">Blog</h2>
-                  <div class="line"></div>
-              </div>
-          </div>
-      </div>
-    </div>
-    <section class="blog pt-0 section-b-space ratio3_2 col-12">
-      <div class="container">
-          <div class="col-12">
-              <div class="col-lg-12">
-                  <div class="slide-3 no-arrow">
-                      <div class="col-lg-3">
-                          <a href="#">
-                              <div class="basic-effect">
-                                  <div>
-                                      <img src="../assets/images/marijuana/blog/1.jpg" class="img-fluid blur-up lazyload bg-img" alt="">
-                                  </div>
-                                  <span></span>
-                              </div>
-                          </a>
-                          <div class="blog-details">
-                              <h4>10 Octobre 2019</h4>
-                              <a href="#">
-                                  <p>Lorem ipsum dolor sit consectetur adipiscing elit, </p>
-                              </a>
-                              <hr class="style1">
-                              <h6>by: John Dio , 2 Comment</h6>
-                          </div>
-                      </div>
-                      <div class="col-lg-3 ">
-                          <a href="#">
-                              <div class="basic-effect">
-                                  <div>
-                                      <img src="../assets/images/marijuana/blog/2.jpg" class="img-fluid blur-up lazyload bg-img" alt="">
-                                  </div>
-                                  <span></span>
-                              </div>
-                          </a>
-                          <div class="blog-details">
-                              <h4>25 Septembre 2019</h4>
-                              <a href="#">
-                                  <p>Lorem ipsum dolor sit consectetur adipiscing elit, </p>
-                              </a>
-                              <hr class="style1">
-                              <h6>by: John Dio , 2 Comment</h6>
-                          </div>
-                      </div>
-                      <div class="col-lg-3">
-                          <a href="#">
-                              <div class="basic-effect">
-                                  <div>
-                                      <img src="../assets/images/marijuana/blog/3.jpg" class="img-fluid blur-up lazyload bg-img" alt="">
-                                  </div>
-                                  <span></span>
-                              </div>
-                          </a>
-                          <div class="blog-details">
-                              <h4>12 Mai 2019</h4>
-                              <a href="#">
-                                  <p>Lorem ipsum dolor sit consectetur adipiscing elit, </p>
-                              </a>
-                              <hr class="style1">
-                              <h6>by: John Dio , 2 Comment</h6>
-                          </div>
-                      </div>
-                  </div>
-              </div>
-          </div>
-      </div>
-    </section>
+   <app-blog></app-blog>
 
   <!-- tap to top start -->
   <div class="tap-top">
@@ -372,54 +294,6 @@
       </div>
     </div>
     <!-- tap to top End -->
-
-    <!-- Quick-view modal popup start-->
-    <div class="modal fade bd-example-modal-lg theme-modal" id="quick-view" tabindex="-1" role="dialog" aria-hidden="true">
-      <div class="modal-dialog modal-lg modal-dialog-centered" role="document">
-          <div class="modal-content quick-view-modal">
-              <div class="modal-body">
-                  <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                  <div class="row">
-                      <div class="col-lg-6 col-xs-12">
-                          <div class="quick-view-img"><img src="../assets/images/pro3/1.jpg" alt="" class="img-fluid blur-up lazyload"></div>
-                      </div>
-                      <div class="col-lg-6 rtl-text">
-                          <div class="product-right">
-                              <h2>Women Pink Shirt</h2>
-                              <h3>$32.96</h3>
-                              <ul class="color-variant">
-                                  <li class="bg-light0"></li>
-                                  <li class="bg-light1"></li>
-                                  <li class="bg-light2"></li>
-                              </ul>
-                              <div class="border-product">
-                                  <h6 class="product-title">product details</h6>
-                                  <p>Sed ut perspiciatis, unde omnis iste natus error sit voluptatem accusantium doloremque laudantium</p>
-                              </div>
-                              <div class="product-description border-product">
-                                  <div class="size-box">
-                                      <ul>
-                                          <li class="active"><a href="#">s</a></li>
-                                          <li><a href="#">m</a></li>
-                                          <li><a href="#">l</a></li>
-                                          <li><a href="#">xl</a></li>
-                                      </ul>
-                                  </div>
-                                  <h6 class="product-title">quantity</h6>
-                                  <div class="qty-box">
-                                      <div class="input-group"><span class="input-group-prepend"><button type="button" class="btn quantity-left-minus" data-type="minus" data-field=""><i class="ti-angle-left"></i></button> </span>
-                                          <input type="text" name="quantity" class="form-control input-number" value="1"> <span class="input-group-prepend"><button type="button" class="btn quantity-right-plus" data-type="plus" data-field=""><i class="ti-angle-right"></i></button></span></div>
-                                  </div>
-                              </div>
-                              <div class="product-buttons"><a href="#" class="btn btn-solid btn-gradient">add to cart</a> <a href="#" class="btn btn-solid btn-gradient">view detail</a></div>
-                          </div>
-                      </div>
-                  </div>
-              </div>
-          </div>
-      </div>
-    </div>
-    <!-- Quick-view modal popup end-->
 
   <app-add-to-cart-modal></app-add-to-cart-modal>
 
