--- a/src/app/admin-sidebar/admin-sidebar.component.html
+++ b/src/app/admin-sidebar/admin-sidebar.component.html
@@ -10,15 +10,15 @@
             <p>Administrateur</p>
         </div>
         <ul class="sidebar-menu">
-            <li><a class="sidebar-header" href="index.html"><i data-feather="home"></i><span>Dashboard</span></a></li>
-            <li><a class="sidebar-header" href="#"><i data-feather="box"></i> <span>Ajouter un produit</span><i class="fa fa-angle-right pull-right"></i></a>
+            <li><a class="sidebar-header" routerLink="/admin-index" routerLinkActive="active"><span>Dashboard</span></a></li>
+            <li><a class="sidebar-header" routerLink="/add-product" routerLinkActive="active"><span>Ajouter un produit</span><i class="fa fa-angle-right pull-right"></i></a>
             </li>
-            <li><a class="sidebar-header" href="#"><i data-feather="box"></i> <span>Liste des produits</span><i class="fa fa-angle-right pull-right"></i></a>
+            <li><a class="sidebar-header" routerLink="/product-list" routerLinkActive="active"><span>Liste des produits</span><i class="fa fa-angle-right pull-right"></i></a>
             </li>
-            <li><a class="sidebar-header" href=""><i data-feather="dollar-sign"></i><span>Commandes</span><i class="fa fa-angle-right pull-right"></i></a>
+            <li><a class="sidebar-header" routerLink="/order-list" routerLinkActive="active"><span>Commandes</span><i class="fa fa-angle-right pull-right"></i></a>
             </li>
-            <li><a class="sidebar-header" href="#"><i data-feather="clipboard"></i><span>Liste Utilisateurs</span><i class="fa fa-angle-right pull-right"></i></a>
+            <li><a class="sidebar-header" routerLink="/user-list" routerLinkActive="active"><span>Liste Utilisateurs</span><i class="fa fa-angle-right pull-right"></i></a>
             </li>
-            <li><a class="sidebar-header" href="media.html"><i data-feather="camera"></i><span>Blog</span></a></li>
+            <li><a class="sidebar-header" routerLink="/" routerLinkActive="active"><span>Blog</span></a></li>
         </ul>
     </div>
