--- a/src/app/user-modifier/user-modifier.component.html
+++ b/src/app/user-modifier/user-modifier.component.html
@@ -1,161 +1,132 @@
-<!DOCTYPE html>
-<html lang="en">
-​
-<head>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width,initial-scale=1">
-    <meta name="description" content="multikart">
-    <meta name="keywords" content="multikart">
-    <meta name="author" content="multikart">
-    <link rel="icon" href="../assets/images/favicon/1.png" type="image/x-icon">
-    <link rel="shortcut icon" href="../assets/images/favicon/1.png" type="image/x-icon">
-    <title>Multikart - Multi-purpopse E-commerce Html Template</title>
-​
-    <!--Google font-->
-    <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,900" rel="stylesheet">
-​
-    <!-- Icons -->
-    <link rel="stylesheet" type="text/css" href="../assets/css/fontawesome.css">
-​
-    <!--Slick slider css-->
-    <link rel="stylesheet" type="text/css" href="../assets/css/slick.css">
-    <link rel="stylesheet" type="text/css" href="../assets/css/slick-theme.css">
-​
-    <!-- Animate icon -->
-    <link rel="stylesheet" type="text/css" href="../assets/css/animate.css">
-​
-    <!-- Themify icon -->
-    <link rel="stylesheet" type="text/css" href="../assets/css/themify-icons.css">
-​
-    <!-- Bootstrap css -->
-    <link rel="stylesheet" type="text/css" href="../assets/css/bootstrap.css">
-​
-    <!-- Theme css -->
-    <link rel="stylesheet" type="text/css" href="../assets/css/color1.css" media="screen" id="color">
-​
-</head>
-​
-<body>
-​
-<app-navbar></app-navbar>
-​
-​
-<!-- section start -->
-<section class="section-b-space">
-    <div class="container">
-        <div class="row">
-            <div class="col-lg-3">
-                <div class="account-sidebar"><a class="popup-btn">Mon compte</a></div>
-                <div class="dashboard-left">
-                    <div class="collection-mobile-back"><span class="filter-back"><i class="fa fa-angle-left" aria-hidden="true"></i> back</span></div>
-                    <div class="block-content">
-                        <ul>
-                            <li class="active"><a href="#">Informations</a></li>
-                            <li><a href="#">Mes commandes</a></li>
-                            <li><a href="#">Newsletter</a></li>
-                            <li><a href="#">Mon compte</a></li>
-                            <li class="last"><a href="#">Se déconnecter</a></li>
-                        </ul>
+​<div class="page-wrapper">
+
+    <div class="page-body-wrapper">
+
+
+      <!-- Page Sidebar Start-->
+      <div class="page-sidebar">
+        <app-user-navbar></app-user-navbar>
+      </div>
+
+
+
+      <!--Navbar user-->
+
+      <div class="page-body">
+        <app-navbar></app-navbar>
+        <h2 style="text-align: center; margin-top: 5%;">Modifier mes informations</h2>
+        <!-- personal detail section start -->
+        <section class="contact-page register-page">
+          <div class="container">
+            <div class="row">
+              <div class="col-sm-12">
+                <h4>Données personnelles</h4>
+                <form class="theme-form">
+                  <div class="form-row">
+                    <div class="col-md-6">
+                      <label for="name">Prénom</label>
+                      <input type="text" class="form-control" id="name" placeholder="" required="">
                     </div>
-                </div>
-            </div>
-            <div class="col-lg-9">
-                <div class="dashboard-right">
-                    <div class="dashboard">
-                        <div class="page-title">
-                            <h2>Tableau de bord</h2></div>
-                            <div class="welcome-msg">
-                                <p>Bonjour, MARK JECNO !</p>
-                                <p>Depuis votre tableau de bord vous pouvez visualiser vos activités récentes ainsi que modifier les informations de votre profil.</p>
-                            </div>
-                            <div class="box-account box-info">
-                                <div class="box-head">
-                                    <h2>Information du compte</h2></div>
-                                <div class="row">
-                                    <div class="col-sm-6">
-                                        <div class="box">
-                                            <div class="box-title">
-                                                <h3>Contact </h3><a href="#">Modifier</a></div>
-                                            <div class="box-content">
-                                                <h6>MARK JECNO</h6>
-                                                <h6>3615 rue du projet prise de tete, 34080 Diginamic</h6>
-​
-                                        </div>
-                                    </div>
-                                    </div>
-                                    <div class="col-sm-6">
-                                        <div class="box">
-                                            <div class="box-title">
-                                                <h3>Newsletters</h3><a href="#">Modifier</a></div>
-                                            <div class="box-content">
-                                                <p>Vous n'êtes pas abonné à notre newsletter.</p>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div>
-                                    <div class="box">
-                                        <div class="box-title">
-                                            <h3>Information fidélité</h3></div>
-                                        <div class="row">
-                                            <div class="col-sm-6">
-                                                <h6>Numéro client</h6><address>RJ45376<br></address></div>
-                                            <div class="col-sm-6">
-                                                <h6>Nombre de points fidélité</h6><address>165<br></address></div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
+                    <div class="col-md-6">
+                      <label for="email">NOM</label>
+                      <input type="text" class="form-control" id="last-name" placeholder="" required="">
                     </div>
-                </div>
+                    <div class="col-md-6">
+                      <label for="review">Numéro de téléphone</label>
+                      <input type="text" class="form-control" id="review" placeholder="" required="">
+                    </div>
+                    <div class="col-md-6">
+                      <label for="email">Adresse Email</label>
+                      <input type="text" class="form-control" id="email" placeholder="" required="">
+                    </div>
+                    <div class="col-md-12">
+                      <button class="btn btn-sm btn-solid" type="submit">Sauvegarder les modifications</button>
+                    </div>
+                  </div>
+                </form>
+              </div>
             </div>
-        </div>
-​
-    </section>
-<!-- section end -->
-​
-​
-<!-- tap to top start -->
-<div class="tap-top">
-    <div><i class="fa fa-angle-double-up"></i></div>
-</div>
-<!-- tap to top end -->
-​
-<!-- latest jquery-->
-<script src="../assets/js/jquery-3.3.1.min.js"></script>
-​
-<!-- menu js-->
-<script src="../assets/js/menu.js"></script>
-​
-<!-- lazyload js-->
-<script src="../assets/js/lazysizes.min.js"></script>
-​
-<!-- popper js-->
-<script src="../assets/js/popper.min.js"></script>
-​
-<!-- slick js-->
-<script src="../assets/js/slick.js"></script>
-​
-<!-- Bootstrap js-->
-<script src="../assets/js/bootstrap.js"></script>
-​
-<!-- Bootstrap Notification js-->
-<script src="../assets/js/bootstrap-notify.min.js"></script>
-​
-<!-- Theme js-->
-<script src="../assets/js/script.js"></script>
-​
-<script>
+          </div>
+        </section>
+        <!-- Section ends -->
+
+
+        <!-- address section start -->
+        <section class="contact-page register-page section-b-space">
+          <div class="container">
+            <div class="row">
+              <div class="col-sm-12">
+                <h4>Adresse de livraison</h4>
+                <form class="theme-form">
+                  <div class="form-row">
+                    <div class="col-md-12">
+                      <label for="name">Adresse</label>
+                      <input type="text" class="form-control" id="address-two" placeholder="" required="">
+                      <input type="text" class="form-control" id="address-two" placeholder="" required="">
+                    </div>
+                    <div class="col-md-6">
+                      <label for="review">Code postal</label>
+                      <input type="text" class="form-control" id="zip" placeholder="" required="">
+                    </div>
+                    <div class="col-md-6">
+                      <label for="email">ville</label>
+                      <input type="text" class="form-control" id="city" placeholder="" required="">
+                    </div>
+
+                    <div class="col-md-12">
+                      <button class="btn btn-sm btn-solid" type="submit">Sauvegarder les modifications</button>
+                    </div>
+                  </div>
+                </form>
+              </div>
+            </div>
+          </div>
+        </section>
+        <!-- Section ends -->
+      </div>
+    </div>
+  </div>
+
+
+  <!-- tap to top -->
+  <div class="tap-top">
+    <div>
+      <i class="fa fa-angle-double-up"></i>
+    </div>
+  </div>
+  <!-- tap to top End -->
+
+
+  <!-- latest jquery-->
+  <script src="../assets/js/jquery-3.3.1.min.js"></script>
+
+  <!-- menu js-->
+  <script src="../assets/js/menu.js"></script>
+
+  <!-- lazyload js-->
+  <script src="../assets/js/lazysizes.min.js"></script>
+
+  <!-- popper js-->
+  <script src="../assets/js/popper.min.js"></script>
+
+  <!-- slick js-->
+  <script src="../assets/js/slick.js"></script>
+
+  <!-- Bootstrap js-->
+  <script src="../assets/js/bootstrap.js"></script>
+
+  <!-- Bootstrap Notification js-->
+  <script src="../assets/js/bootstrap-notify.min.js"></script>
+
+  <!-- Theme js-->
+  <script src="../assets/js/script.js"></script>
+
+  <script>
     function openSearch() {
-        document.getElementById("search-overlay").style.display = "block";
+      document.getElementById("search-overlay").style.display = "block";
     }
-​
+
     function closeSearch() {
-        document.getElementById("search-overlay").style.display = "none";
+      document.getElementById("search-overlay").style.display = "none";
     }
-</script>
-</body>
-​
-</html>
+  </script>
