--- a/src/app/product-list/product-list.component.html
+++ b/src/app/product-list/product-list.component.html
@@ -37,7 +37,7 @@
       <div class="container-fluid">
         <div class="row">
           <div class="col-sm-12">
-            <div class="card" style="margin-left: -31px;">
+            <div class="card">
               <div class="card-header col-sm-12">
                 <h5>Liste de produits</h5>
               </div>
@@ -50,6 +50,7 @@
                       <th>Nom du produit</th>
                       <th>Origine</th>
                       <th>Conditionnement</th>
+                      <th>Prix</th>
                       <th>Stock</th>
                       <th>Action</th>
                     </tr>
@@ -62,8 +63,11 @@
                       <td><!-- Nom du produit -->Café Moka Bio</td>
                       <td><!-- Origine -->Colombie</td>
                       <td><!-- Conditionnement -->100 Grs</td>
+                      <td><!-- Prix -->€15.99 </td>
                       <td><!-- Stock --><span class="badge badge-success">18</span></td>
-                      <td><!-- Action --></td>
+                      <td><!-- Action -->
+                        <span class="table-remove"><button type="button" class="badge badge-danger badge-rounded badge-sm my-0">Supprimer</button></span>
+                        <span class="table-edit"><button type="button" class="badge badge-warning badge-rounded badge-sm my-0">Modifier</button></span></td>
                     </tr>
                     <tr>
                       <!-- Id du produit -->
@@ -72,8 +76,11 @@
                       <td><!-- Nom du produit -->Café Arabica Bio</td>
                       <td><!-- Origine -->Mozambique</td>
                       <td><!-- Conditionnement -->100 Grs</td>
+                      <td><!-- Prix -->€18.99 </td>
                       <td><!-- Stock --><span class="badge badge-success">23</span></td>
-                      <td><!-- Action --></td>
+                      <td><!-- Action -->
+                        <span class="table-remove"><button type="button" class="badge badge-danger badge-rounded badge-sm my-0">Supprimer</button></span>
+                        <span class="table-edit"><button type="button" class="badge badge-warning badge-rounded badge-sm my-0">Modifier</button></span></td>
                     </tr>
                     <tr>
                       <!-- Id du produit -->
@@ -82,8 +89,11 @@
                       <td><!-- Nom du produit -->Café Robusta Bio</td>
                       <td><!-- Origine -->Réunion</td>
                       <td><!-- Conditionnement -->200 Grs</td>
+                      <td><!-- Prix -->€25.99 </td>
                       <td><!-- Stock --><span class="badge badge-danger">1</span></td>
-                      <td><!-- Action --></td>
+                      <td><!-- Action -->
+                        <span class="table-remove"><button type="button" class="badge badge-danger badge-rounded badge-sm my-0">Supprimer</button></span>
+                        <span class="table-edit"><button type="button" class="badge badge-warning badge-rounded badge-sm my-0">Modifier</button></span></td>
                     </tr>
                     <tr>
                       <!-- Id du produit -->
@@ -92,8 +102,11 @@
                       <td><!-- Nom du produit -->Thé Earl Grey</td>
                       <td><!-- Origine -->Inde</td>
                       <td><!-- Conditionnement -->500 Grs</td>
+                      <td><!-- Prix -->€25.99 </td>
                       <td><!-- Stock --><span class="badge badge-warning">10</span></td>
-                      <td><!-- Action --></td>
+                      <td><!-- Action -->
+                        <span class="table-remove"><button type="button" class="badge badge-danger badge-rounded badge-sm my-0">Supprimer</button></span>
+                        <span class="table-edit"><button type="button" class="badge badge-warning badge-rounded badge-sm my-0">Modifier</button></span></td>
                     </tr>
                   </tbody>
                 </table>
