--- a/src/app/admin-sidebar/admin-sidebar.component.html
+++ b/src/app/admin-sidebar/admin-sidebar.component.html
@@ -17,7 +17,7 @@
             </li>
             <li><a class="sidebar-header" routerLink="/order-list" routerLinkActive="active"><span>Commandes</span><i class="fa fa-angle-right pull-right"></i></a>
             </li>
-            <li><a class="sidebar-header" routerLink="/user-list" routerLinkActive="active"><span>Liste Utilisateurs</span><i class="fa fa-angle-right pull-right"></i></a>
+            <li><a class="sidebar-header" routerLink="/user-list" routerLinkActive="active"><span>Liste des Clients</span><i class="fa fa-angle-right pull-right"></i></a>
             </li>
             <li><a class="sidebar-header" routerLink="/" routerLinkActive="active"><span>Blog</span></a></li>
         </ul>
