--- a/src/app/user-navbar/user-navbar.component.html
+++ b/src/app/user-navbar/user-navbar.component.html
@@ -1,3 +1,6 @@
+<div class="main-header-left d-none d-lg-block">
+  <div class="logo-wrapper"><a href="index.html"><img class="blur-up lazyloaded" src="../assets/images/dashboard/multikart-logo.png" alt=""></a></div>
+</div>
 <div class="sidebar custom-scrollbar;">
   <div class="sidebar-user text-center">
     <div><img class="img-60 rounded-circle lazyloaded blur-up" src="../assets/images/dashboard/man.jpg" alt="#">
@@ -8,15 +11,9 @@
   </div>
   <ul class="sidebar-menu">
     <li><a class="sidebar-header" routerLink="/user-dashboard" routerLinkActive="active"><span>Accueil</span></a></li>
-    <li><a class="sidebar-header" routerLink="/user-modifier" routerLinkActive="active"> <span>Modifier mon
-          profil</span><i class="fa fa-angle-right pull-right"></i></a>
-    </li>
-    <li><a class="sidebar-header" routerLink="/user-search" routerLinkActive="active"><span>Rechercher une
-          commande</span><i class="fa fa-angle-right pull-right"></i></a>
-    </li>
-    <li><a class="sidebar-header" routerLink="/user-historique" routerLinkActive="active"><span>Historique </span><i
-          class="fa fa-angle-right pull-right"></i></a>
-    </li>
-    <li><a class="sidebar-header" routerLink="/homepage" routerLinkActive="active"><span>Se déconnecter</span></a></li>
+    <li><a class="sidebar-header" routerLink="/user-modifier" routerLinkActive="active"> <span>Modifier mon profil</span><i class="fa fa-angle-right pull-right"></i></a></li>
+    <li><a class="sidebar-header" routerLink="/user-search" routerLinkActive="active"><span>Rechercher une commande</span><i class="fa fa-angle-right pull-right"></i></a></li>
+    <li><a class="sidebar-header" routerLink="/user-historique" routerLinkActive="active"><span>Historique </span><i class="fa fa-angle-right pull-right"></i></a></li>
+    <li><a class="sidebar-header" routerLink="/" routerLinkActive="active"><span>Se déconnecter</span></a></li>
   </ul>
 </div>
