Enlevage de la barre blanche chiante au dessus des pages User

--- a/src/app/user-dashboard/user-dashboard.component.html
+++ b/src/app/user-dashboard/user-dashboard.component.html
@@ -1,8 +1,6 @@
-​<div class="page-wrapper">
-
+​      <app-navbar></app-navbar>
+<div class="page-wrapper">
     <div class="page-body-wrapper">
-  
-  
       <!-- Page Sidebar Start-->
       <div class="page-sidebar">
         <app-user-navbar></app-user-navbar>
@@ -11,7 +9,7 @@
       <!--Navbar user-->
   
       <div class="page-body">
-        <app-navbar></app-navbar>
+  
         ​
         <!-- section start -->
         <section class="section-b-space">
