--- a/src/app/user-modifier/user-modifier.component.html
+++ b/src/app/user-modifier/user-modifier.component.html
@@ -1,4 +1,5 @@
-​<div class="page-wrapper">
+<app-navbar></app-navbar>
+<div class="page-wrapper">
 
   <div class="page-body-wrapper">
 
@@ -13,7 +14,6 @@
     <!--Navbar user-->
 
     <div class="page-body">
-      <app-navbar></app-navbar>
       <h2 style="text-align: center; margin-top: 5%;">Modifier mon profil</h2>
       <!-- personal detail section start -->
       <section class="contact-page register-page">
