--- a/src/app/user-historique/user-historique.component.html
+++ b/src/app/user-historique/user-historique.component.html
@@ -1,19 +1,15 @@
-​<div class="page-wrapper">
-
+<app-navbar></app-navbar>
+<div class="page-wrapper">
     <div class="page-body-wrapper">
-
-
+   
       <!-- Page Sidebar Start-->
       <div class="page-sidebar">
         <app-user-navbar></app-user-navbar>
       </div>
-
-
-
       <!--Navbar user-->
 
       <div class="page-body">
-        <app-navbar></app-navbar>
+       
         <h2 style="text-align: center; margin-top: 5%;">Historique des commandes</h2>
         <!-- personal detail section start -->
         <section class="contact-page register-page">
@@ -40,27 +36,19 @@
                         <tr>
                           <!-- Référence -->
                           <td>REF-12341-100</td>
-                          <td>
-                            <!-- Date -->12/09/19</td>
-                          <td>
-                            <!-- client -->Jean Neymar</td>
-                          <td>
-                            <!-- Montant -->38,90€</td>
-                          <td>
-                            <!-- Statut -->Livré</td>
+                          <td><!-- Date -->12/09/19</td>
+                          <td><!-- client -->Jean Neymar</td>
+                          <td><!-- Montant -->38,90€</td>
+                          <td><!-- Statut -->Livré</td>
                         </tr>
                         <tr>
-                            <!-- Référence -->
-                            <td>REF-12651-109</td>
-                            <td>
-                              <!-- Date -->11/06/19</td>
-                            <td>
-                              <!-- client -->Jean Neymar</td>
-                            <td>
-                              <!-- Montant -->67,90€</td>
-                            <td>
-                              <!-- Statut -->Annulé</td>
-                          </tr>
+                          <!-- Référence -->
+                          <td>REF-12651-109</td>
+                          <td> <!-- Date -->11/06/19</td>
+                          <td> <!-- client -->Jean Neymar</td>
+                          <td> <!-- Montant -->67,90€</td>
+                          <td> <!-- Statut -->Annulé</td>
+                        </tr>
                       </tbody>
                     </table>
                   </div>
@@ -70,10 +58,9 @@
           </div>
         </section>
         <!-- Section ends -->
-
-      </div>
     </div>
   </div>
+</div>
 
 
   <!-- tap to top -->
