--- a/src/app/user-search/user-search.component.html
+++ b/src/app/user-search/user-search.component.html
@@ -1,4 +1,5 @@
-​​<div class="page-wrapper">
+<app-navbar></app-navbar>​​
+<div class="page-wrapper">
 
     <div class="page-body-wrapper">
 
@@ -13,7 +14,7 @@
       <!--Navbar user-->
 
       <div class="page-body">
-        <app-navbar></app-navbar>
+
         <h2 style="text-align: center; margin-top: 5%;">Rechercher une commande</h2>
 
         <!-- personal detail section start -->
