--- a/src/app/admin-sidebar/admin-sidebar.component.html
+++ b/src/app/admin-sidebar/admin-sidebar.component.html
@@ -2,7 +2,7 @@
     <div class="main-header-left d-none d-lg-block">
         <div class="logo-wrapper"><a href="index.html"><img class="blur-up lazyloaded" src="../assets/images/dashboard/multikart-logo.png" alt=""></a></div>
     </div>
-    <div class="sidebar custom-scrollbar">
+    <div class="sidebar custom-scrollbar" style="background-color: #d0e1c7;">
         <div class="sidebar-user text-center">
             <div><img class="img-60 rounded-circle lazyloaded blur-up" src="../assets/images/dashboard/man.jpg" alt="#">
             </div>
