--- a/src/app/admin-sidebar/admin-sidebar.component.html
+++ b/src/app/admin-sidebar/admin-sidebar.component.html
@@ -1,8 +1,8 @@
 
-<div class="main-header-left d-none d-lg-block">
-  <div class="logo-wrapper"><a href="index.html"><img class="blur-up lazyloaded" src="../assets/images/dashboard/multikart-logo.png" alt=""></a></div>
+<div class="main-header-left d-none d-lg-block" >
+  <div class="logo-wrapper"><a href="index.html"><img class="blur-up lazyloaded" src="../assets/images/the-cafe/Logo.png" alt=""></a></div>
 </div>
-<div class="sidebar custom-scrollbar" style="background-color: #d0e1c7;">
+<div class="sidebar custom-scrollbar">
   <div class="sidebar-user text-center">
     <div><img class="img-60 rounded-circle lazyloaded blur-up" src="../assets/images/dashboard/man.jpg" alt="#"></div>
             <h6 class="mt-3 f-14">John Doe</h6>
@@ -14,6 +14,6 @@
             <li><a class="sidebar-header" routerLink="/product-list" routerLinkActive="active"><span>Liste des produits</span><i class="fa fa-angle-right pull-right"></i></a></li>
             <li><a class="sidebar-header" routerLink="/order-list" routerLinkActive="active"><span>Commandes</span><i class="fa fa-angle-right pull-right"></i></a></li>
             <li><a class="sidebar-header" routerLink="/user-list" routerLinkActive="active"><span>Liste des Clients</span><i class="fa fa-angle-right pull-right"></i></a></li>
-            <li><a class="sidebar-header" routerLink="/" routerLinkActive="active"><span>Blog</span></a></li>
+            <li><a class="sidebar-header" routerLink="/blog" routerLinkActive="active"><span>Blog</span><i class="fa fa-angle-right pull-right"></i></a></li>
         </ul>
 </div>
