--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -40,7 +40,7 @@
               <div class="main-menu">
                   <div class="menu-left">
                     <div class="brand-logo">
-                      <a href="index.html"> <img src="../assets/images/icon/logo.png" class="img-fluid lazyload" alt="" style="width: 9%;margin-top: -3%;"></a>
+                      <a href="index.html"> <img src="../assets/images/icon/logo.png" class="img-fluid lazyload" alt=""></a>
                   </div>
                   </div>
                   <div class="menu-right pull-right">
