--- a/src/app/order/order.component.html
+++ b/src/app/order/order.component.html
@@ -39,7 +39,7 @@
                                 <h5>Liste de commandes</h5>                               
                             </div>
                             <div class="card-body order-datatable col-12">
-                                <table class="display col-12" id="basic-1" style="text-align: center;"> 
+                                <table class="display col-12" id="basic-1"> 
                                     <thead>
                                     <tr>
                                         <th>Id de la commande</th>
