--- a/src/app/product-coffee/product-coffee.component.html
+++ b/src/app/product-coffee/product-coffee.component.html
@@ -1,8 +1,8 @@
 <app-navbar></app-navbar>
 <!-- header end -->
-<div id="Subheader" style="padding:100px 0;">
+<div id="Subheader">
   <div class="container">
-      <div class="column one" style="margin-left: 36%;">
+      <div class="column one">
           <h1 class="title">Nos cafés</h1>
       </div>
   </div>
