--- a/src/app/product-list/product-list.component.html
+++ b/src/app/product-list/product-list.component.html
@@ -42,7 +42,7 @@
                 <h5>Liste de produits</h5>
               </div>
               <div class="card-body order-datatable col-12">
-                <table class="display col-12" id="basic-1" style="text-align: center;">
+                <table class="display col-12" id="basic-1">
                   <thead>
                     <tr>
                       <th>Id du produit</th>
