--- a/src/app/user-dashboard/user-dashboard.component.html
+++ b/src/app/user-dashboard/user-dashboard.component.html
@@ -1,4 +1,4 @@
-​      <app-navbar></app-navbar>
+<app-navbar></app-navbar>
 <div class="page-wrapper">
     <div class="page-body-wrapper">
       <!-- Page Sidebar Start-->
