--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -11,11 +11,12 @@
                         <div class="form-group">
                             <label for="email">Email</label>
                             <input type="text" class="form-control" id="email" placeholder="Email" required="">
-                        </div>
-                        <div class="form-group">
+                      </div>
+                      <div class="form-group">
                             <label for="review">Mot de passe</label>
                             <input type="password" class="form-control" id="review" placeholder="Entrez votre mot de passe" required="">
-                        </div><a href="#" class="btn btn-solid" style="margin-left: 36%;">Se Connecter</a></form>
+                      </div><a href="#" class="btn btn-solid">Se Connecter</a>
+                    </form>
                 </div>
             </div>
             <div class="col-lg-6 right-login">
@@ -23,7 +24,7 @@
                 <div class="theme-card authentication-right">
                     <h6 class="title-font">Créer un nouveau compte</h6>
                     <p>Créez un nouveau compte dans notre échoppe ! La création de compte est rapide et facile. Cela vous permet  Cela vous permet de commander chez nous</p>
-                    <a href="#" class="btn btn-solid" style="margin-top: 16%;margin-left: 26%;">Créer un nouveau compte</a></div>
+                    <a href="#" class="btn btn-solid">Créer un nouveau compte</a></div>
             </div>
         </div>
     </div>
