--- a/src/app/my-profile/my-profile.component.html
+++ b/src/app/my-profile/my-profile.component.html
@@ -1,45 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="multikart">
-    <meta name="keywords" content="multikart">
-    <meta name="author" content="multikart">
-    <link rel="icon" href="../assets/images/favicon/1.png" type="image/x-icon"/>
-    <link rel="shortcut icon" href="../assets/images/favicon/1.png" type="image/x-icon"/>
-    <title>Multikart - Multi-purpopse E-commerce Html Template</title>
-
-    <!--Google font-->
-    <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,900" rel="stylesheet">
-
-    <!-- Icons -->
-    <link rel="stylesheet" type="text/css" href="../assets/css/fontawesome.css">
-
-    <!--Slick slider css-->
-    <link rel="stylesheet" type="text/css" href="../assets/css/slick.css">
-    <link rel="stylesheet" type="text/css" href="../assets/css/slick-theme.css">
-
-    <!-- Animate icon -->
-    <link rel="stylesheet" type="text/css" href="../assets/css/animate.css">
-
-    <!-- Themify icon -->
-    <link rel="stylesheet" type="text/css" href="../assets/css/themify-icons.css">
-
-    <!-- Bootstrap css -->
-    <link rel="stylesheet" type="text/css" href="../assets/css/bootstrap.css">
-
-    <!-- Theme css -->
-    <link rel="stylesheet" type="text/css" href="../assets/css/color1.css" media="screen" id="color">
-
-
-</head>
-<body>
-
-
 <app-navbar></app-navbar>
-
 
 <!-- personal detail section start -->
 <section class="contact-page register-page">
@@ -54,7 +13,7 @@
                             <input type="text" class="form-control" id="name" placeholder="" required="">
                         </div>
                         <div class="col-md-6">
-                            <label for="email">NOM</label>
+                            <label for="email">Nom</label>
                             <input type="text" class="form-control" id="last-name" placeholder="" required="">
                         </div>
                         <div class="col-md-6">
@@ -72,7 +31,6 @@
     </div>
 </section>
 <!-- Section ends -->
-
 
 <!-- address section start -->
 <section class="contact-page register-page section-b-space">
@@ -92,7 +50,7 @@
                             <input type="text" class="form-control" id="zip" placeholder="" required="">
                         </div>
                         <div class="col-md-6">
-                            <label for="email">ville</label>
+                            <label for="email">Ville</label>
                             <input type="text" class="form-control" id="city" placeholder="" required="">
                         </div>
 
@@ -107,8 +65,6 @@
 </section>
 <!-- Section ends -->
 
-
-
 <!-- tap to top -->
 <div class="tap-top">
     <div>
@@ -116,7 +72,6 @@
     </div>
 </div>
 <!-- tap to top End -->
-
 
 <!-- latest jquery-->
 <script src="../assets/js/jquery-3.3.1.min.js" ></script>
@@ -151,7 +106,3 @@
         document.getElementById("search-overlay").style.display = "none";
     }
 </script>
-
-</body>
-
-</html>
